...
                    })
                        , in: range, step: stepSize) {
                Text("Value: \(charLimit)")
                
            }
            .padding(.leading, 45).padding(.trailing, 45)
            .accessibilityIdentifier("MaxCountStepper")
        }
    }
    
    struct SettingsView_Previews: PreviewProvider {
        @State static var colour = Color.yellow
        @State static var charLimit = 150
...
